--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,20 @@
+form{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
+}
+
 ul{
     list-style: none;
+}
+
+
+label{
+    margin:15px;
+    text-align: center;
+}
+
+button{
+    margin: 10px;
 }
