--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <div id="menu">
+    <div id="header">
         <a [routerLink]="['/']" routerLinkActive="router-link-active"> 
             <button mat-button>
                 <span class="inicio">Semaforo de tareas</span>
