--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,13 +1,12 @@
 nav{
-    width: 200px;
-    margin-bottom: 20px;
-    text-align: left;
-}
-
-#menu{
     width: 100%;
+    text-align: left;
     background-color: white;
     height: 50px;
+}
+
+#header{
+    width: 100%;
 }
 
 .inicio{
