--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,16 +2,17 @@ form{
     text-align: center;
     width: 100%;
     height: 100%;
-    background-color: aqua;
+    background-color: #4171bf;
 }
 
 ul{
+    position: relative;
+    top:30px;
     list-style: none;
 }
 
 
 label{
-    margin:15px;
     text-align: center;
 }
 
